tdf#62182 .uno:PrintLayout and .uno:BrowseView become set commands.

The patch was sent for the ULAKBIM/Pardus project

Change-Id: I2c8c5d92bc6755043e086a0cad7739dd06a7655e
Signed-off-by: Gulsah Kose <gulsah.1004@gmail.com>